# shopee-affiliate-clip

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.cinematic.json  config.handheld.json
src/affclip/: __init__.py  media.py  pipeline.py  providers.py
