[project]
name = "shopee-affiliate-clip"
version = "0.1.0"
description = "Turn a Shopee product photo into a vertical (9:16) cinematic promo clip with voice-over and ducked backsound."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yankee Shop" }]
keywords = ["shopee", "affiliate", "video", "tiktok", "reels", "shorts", "ai"]
dependencies = [
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4.9",
    "numpy>=1.24",
    "scipy>=1.10",
    "pillow>=10.0",
    "requests>=2.31",
    "fal-client>=0.4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
affclip = "affclip.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/affclip"]
